--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,14 @@
 		    </configuration>
 		</plugin>
     </plugins>
+    <resources>
+    	<resource>
+    		<directory>src/main/java</directory>
+    	</resource>
+    	<resource>
+    		<directory>src/test/java</directory>
+    	</resource>
+    </resources>
   </build>
 
 	<repositories>
