--- a/pom.xml
+++ b/pom.xml
@@ -80,30 +80,27 @@
 
 
  	<dependency>
-		<groupId>com.github.bgithub1</groupId>
+	 	<groupId>com.github.bgithub1</groupId>
 		<artifactId>collectionsstaticmethods</artifactId>
-		<version>1.0</version>
+		<version>c57a5e1473</version>
 	</dependency>
 
  	<dependency>
 		<groupId>com.github.bgithub1</groupId>
 		<artifactId>mongo-helper</artifactId>
-		<version>1.0</version>
+		<version>361841f1f5</version>
 	</dependency>
 
 	<dependency>
 		<groupId>com.github.bgithub1</groupId>
 		<artifactId>web-clnt-access</artifactId>
-		<version>1.1</version>
+		<version>633a94a087</version>
 	</dependency>
-
-
-
 
 	<dependency>
 		<groupId>com.github.bgithub1</groupId>
 		<artifactId>simple-web-service</artifactId>
-		<version>1.0</version>
+		<version>4c6cc756e1</version>
 	</dependency>
 
 
